# xlsxtoxmlconverter

./: CONTACTS_XML.xml  Cargo.toml  contacts.xml  flake.nix  readme.md  shell.nix
src/: config  main.rs  old.txt  types.rs  utils.rs  xlsx_maniulation.rs  xml_manipulation.rs
