[package]
name = "evcconvert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.28.1"
egui = "0.28.1"
egui_code_editor = "0.2.9"
winit = { version = "0.30.4", default-features = false, features = ["wayland", "x11"] }
# egui_extras = {version="0.28.1", features= ["all_loaders"]}
env_logger = "0.11.3"
# rayon = "1.10.0"
calamine = "0.25.0"
egui_file = "0.18.0"
egui-toast = "0.14.0"
chrono = "0.4.38"

# [target.x86_64-pc-windows-gnu]
# linker = "x86_64-w64-mingw32-gcc"
